--- a/css/weather_card.css
+++ b/css/weather_card.css
@@ -35,7 +35,7 @@ box borders #ebebeb;
 
 .card-wrapper{
   width: 160px;
-  margin: auto;
+  margin-left: 73px;
   text-align: left;
 }
 
